# startupai-crew-decision

./: .env.example  README.md  pyproject.toml
src/decision_crew/: __init__.py  crew.py  main.py
src/decision_crew/config/: agents.yaml  tasks.yaml
